primera sección + header

--- a/index.html
+++ b/index.html
@@ -13,7 +13,22 @@
 </head>
 
 <body>
+    <main class="main">
+        <header class="contenedor-fluido header">
+            <div class="contenedor">
+                <a href="index.html" title="Sitio Dexter" class="logo">
+                    <img src="img/logo-isotipo.png" alt="Sitio de Dexter" class="logo-img">
+                    <span class="logo-logotipo">"The Lab"</span>
+                </a>
+            </div>
+        </header>
+        <section class="contenedor-fluido hero">
+            <div class="contenedor">
 
+                <div class="prueba"></div>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
