contenido del hero

--- a/index.html
+++ b/index.html
@@ -24,8 +24,15 @@
         </header>
         <section class="contenedor-fluido hero">
             <div class="contenedor">
+                <article class="info">
+                    <h1 class="title">Dex’s Laboratory:
+                        <br />a funny freebie.</h1>
+                    <p class="desc">Brought to You by Balkan Brothers studio... </p>
+                    <a href="#" class="btn btn-download">Le’ Download</a>
+                </article>
+            </div>
+            <div class="hero-footer">
 
-                <div class="prueba"></div>
             </div>
         </section>
     </main>
