botones twitter y facebook

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 </head>
 
 <body>
+    <div id="fb-root"></div>
+
     <main class="main">
         <header class="contenedor-fluido header">
             <div class="contenedor">
@@ -31,11 +33,45 @@
                     <a href="#" class="btn btn-download">Le’ Download</a>
                 </article>
             </div>
-            <div class="hero-footer">
-
+            <div class="hero-footer contenedor-fluido">
+                <div class="contenedor">
+                    We are never empty handed towards our dribbble community.
+                    <div class="fb-like" data-href="https://github.com/DiMaNacho/dexter-site" data-layout="button_count" data-action="like" data-size="small"
+                        data-show-faces="false" data-share="false"></div>
+                    <a class="twitter-share-button miclase" href="https://twitter.com/intent/tweet?text=Hello%20world" data-size="large">
+                        Tweet</a>
+                </div>
             </div>
         </section>
     </main>
+
+    <script>
+        (function (d, s, id) {
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) return;
+            js = d.createElement(s); js.id = id;
+            js.src = 'https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v3.0';
+            fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));
+    </script>
+    <script>
+        window.twttr = (function (d, s, id) {
+            var js, fjs = d.getElementsByTagName(s)[0],
+                t = window.twttr || {};
+            if (d.getElementById(id)) return t;
+            js = d.createElement(s);
+            js.id = id;
+            js.src = "https://platform.twitter.com/widgets.js";
+            fjs.parentNode.insertBefore(js, fjs);
+
+            t._e = [];
+            t.ready = function (f) {
+                t._e.push(f);
+            };
+
+            return t;
+        }(document, "script", "twitter-wjs"));
+    </script>
 </body>
 
 </html>
