--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div id="fb-root"></div>
 
     <main class="main">
-        <header class="contenedor-fluido header">
+        <header class="contenedor-fluido flex header">
             <div class="contenedor">
                 <a href="index.html" title="Sitio Dexter" class="logo">
                     <img src="img/logo-isotipo.png" alt="Sitio de Dexter" class="logo-img">
@@ -24,16 +24,19 @@
                 </a>
             </div>
         </header>
-        <section class="contenedor-fluido hero">
-            <div class="contenedor">
+        <section class="contenedor-fluido flex hero">
+            <div class="contenedor hero-info">
                 <article class="info">
-                    <h1 class="title">Dex’s Laboratory:
-                        <br />a funny freebie.</h1>
-                    <p class="desc">Brought to You by Balkan Brothers studio... </p>
-                    <a href="#" class="btn btn-download">Le’ Download</a>
+                    <div>
+                        <h1 class="title">Dex’s Laboratory:
+                            <br />a funny freebie.</h1>
+                        <p class="desc">Brought to You by Balkan Brothers studio... </p>
+                        <a href="#" class="btn btn-download">Le’ Download</a>
+                    </div>
                 </article>
+                <img src="img/smartphone.png" class="smartphone" />
             </div>
-            <div class="hero-footer contenedor-fluido">
+            <div class="hero-footer contenedor-fluido flex">
                 <div class="contenedor">
                     We are never empty handed towards our dribbble community.
                     <div class="fb-like" data-href="https://github.com/DiMaNacho/dexter-site" data-layout="button_count" data-action="like" data-size="small"
@@ -42,6 +45,37 @@
                         Tweet</a>
                 </div>
             </div>
+        </section>
+        <section class="contenedor-fluido flex bullets">
+            <ul class="contenedor flex vcenter ">
+                <li class="bullets-item flex vcenter spaceship">
+                    <img src="img/icon-spaceship.png" class="img">
+                    <div class="title">
+                        5.5
+                    </div>
+                    <div class="desc">
+                        space trips
+                    </div>
+                </li>
+                <li class="bullets-item flex vcenter bulb">
+                    <img src="img/icon-bulb.png" class="img">
+                    <div class="title">
+                        500+
+                    </div>
+                    <div class="desc">
+                        magic potions
+                    </div>
+                </li>
+                <li class="bullets-item flex vcenter touch">
+                    <img src="img/icon-touch.png" class="img">
+                    <div class="title">
+                        What
+                    </div>
+                    <div class="desc">
+                        does this button do ?
+                    </div>
+                </li>
+            </ul>
         </section>
     </main>
 
