--- a/index.html
+++ b/index.html
@@ -77,6 +77,26 @@
                 </li>
             </ul>
         </section>
+        <section class="contenedor-fluido flex personajes">
+            <div class="contenedor flex">
+                <div class="personajes-item flex item-uno">
+                    <div class="bloque lado-a flex vcenter hcenter">
+                        <img src="img/dexter-lindo.png" alt="Dexter Lindo">
+                    </div>
+                    <div class="bloque lado-b">
+
+                    </div>
+                </div>
+                <div class="personajes-item flex item-dos">
+                    <div class="bloque lado-a">
+
+                    </div>
+                    <div class="bloque lado-b flex vcenter hcenter">
+                        <img src="img/dexters-dee-dee.png" alt="Dexter y su Hermana">
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <script>
